style.css
/* ... */
.workwithme-button.brandingbutton:hover {
  background-color: var(--lavender);
  color: var(--black);
}

.workwithme-button.webdesignbutton:hover {
  background-color: var(--chartuese);
  color: var(--black);
}

.workwithme-button.alacartebutton {
  font-size: 1.1em;
}

.workwithme-button.alacartebutton:hover {
  background-color: var(--coral);
  color: var(--black);
}

.camera {
  width: 100vw;
  height: 100vh;
  overflow: visible;
}

.sectionheight1 {
  height: 280vh;
}

.sticky-element1 {
  margin-left: auto;
  margin-right: auto;
  position: sticky;
  top: 0;
}

.track1 {
  flex-flow: row;
  justify-content: flex-start;
  align-items: stretch;
  margin-left: auto;
  margin-right: auto;
  padding-top: 17em;
  display: flex;
  transform: translate(0);
}

.panel-wrapp1 {
  flex-flow: row;
  width: 100vw;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.panell1 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f8e0ea958b55d42035c667_crimsen-logo-design.png");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-left: 2em;
  margin-right: 2em;
  transition: transform .3s;
}

.panell1:hover {
  transform: translate(0, -20px);
}

.panel-wrapp2 {
  flex-flow: row;
  width: 100vw;
  display: flex;
}

.panel-wrap3, .panel-wrap4 {
  width: 100vw;
  display: flex;
}

.panell2 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/66513b629aa00f7a95f82361_foxlogo-emboss.web.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell2:hover {
  transform: translate(0, -20px);
}

.panell3 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f90561ad6b2b8cee593980_honey-bee-sensual-labelmockup2.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell3:hover {
  transform: translate(0, -20px);
}

.panell4 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f9070adaf1019263b4d456_kandrasocials2.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell4:hover {
  transform: translate(0, -20px);
}

.panell5 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f90d562d51648a320bee93_Calmunion-Angel-Logo_Files-02.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell5:hover {
  transform: translate(0, -20px);
}

.panell6 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f909e8769b470586262d42_forestheart-socials-01.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell6:hover {
  transform: translate(0, -20px);
}

.panell7 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/67e4b439d69e1c8f37239bfc_ss-logo-pink-lightpink.jpg");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell7:hover {
  transform: translate(0, -20px);
}

.panell8 {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/65f90b39ad6b2b8cee5e38da_LB-boxmockup-front.png");
  background-position: 50%;
  background-size: cover;
  border: 1px solid #000;
  border-radius: 20px;
  width: 450px;
  height: 450px;
  margin-right: 2em;
  transition: transform .3s;
}

.panell8:hover {
  transform: translate(0, -20px);
}

.heading-14 {
  margin-left: 0;
  padding-left: .3em;
  font-family: Ppplayground, sans-serif;
  font-size: 9em;
  position: absolute;
  top: 133px;
}

.info {
  padding-left: 0;
  padding-right: 0;
}

.about-wrapper {
  margin-bottom: 5em;
}

.heading-15 {
  color: #000;
  margin-bottom: 1em;
  font-size: 3em;
  font-weight: 400;
}

.heading-16 {
  font-family: Ppplayground, sans-serif;
  font-size: 8em;
  line-height: 100px;
}

.paragraph-3 {
  width: 80%;
  margin-bottom: 1em;
  padding-top: 0;
  padding-left: 0;
  padding-right: 0;
  font-size: 1.5em;
}

.n-squiggle {
  z-index: -4;
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/6646982ebde7529c34dfd949_Nsquiggle.png");
  background-position: 50%;
  background-size: cover;
  width: 800px;
  height: 800px;
  display: none;
  position: absolute;
  inset: auto auto -23% 35%;
}

@keyframes natImgPan {
  0%   { background-position: 20% 50%; }
  50%  { background-position: 80% 50%; }
  100% { background-position: 20% 50%; }
}

.nat-img {
  background-image: url("https://cdn.prod.website-files.com/65c5586c812f9f3723ee3036/69633283cc385e79edccf713_IMG_0023-2-web.jpg");
  background-position: 50% 50%;
  background-size: 130%;
  border: 1px solid #000;
  border-radius: 20px;
  width: 470px;
  height: 620px;
  animation: natImgPan 4s ease-in-out infinite;
}

.close-x {
  flex-flow: row;
  justify-content: center;
  align-items: center;
  width: 20px;
  height: 20px;
  margin-left: auto;
  margin-right: 3px;
  display: flex;
  position: absolute;
  inset: 5% 0% auto auto;
}

.close-x.close-branding {
  margin-right: 3px;
  top: 5%;
  bottom: auto;
  left: auto;
}

.div-block-32 {
  background-color: var(--black);
  width: 1px;
  height: 30px;
  position: absolute;
  transform: rotate(45deg);
}
/* ... */

